[gd_scene load_steps=2 format=3 uid="uid://cptb5cgxlvvlb"]

[ext_resource type="Script" path="res://ui/ExpeditionScreen.gd" id="1_3p4xn"]

[node name="ExpeditionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3p4xn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Space Mining Expedition"
horizontal_alignment = 1

[node name="MineralsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Total Minerals: 0"
horizontal_alignment = 1

[node name="MiningRateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Mining Rate: 10.0 minerals/s"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Time Remaining: 60 seconds"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 4
value = 50.0
show_percentage = false

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Start Expedition"
